# QRTerm

./: .gitignore  README.md  pyproject.toml
src/qrterm/: __init__.py  __main__.py  qr_tk.py
